# robotics_software_engineer

./: .gitignore
bal_robot_urdf_description/: package.xml  setup.cfg  setup.py
bal_robot_urdf_description/launch/: camera_linefollowing.launch.py  display.launch.py  gazebo.launch.py  lidar_wallfollowing.launch.py  navigation.launch.py
bal_robot_urdf_description/meshes/: base_link.stl  imu_1.stl  lbwheel_1.stl  lfwheel_1.stl  rbwheel_1.stl  realsence_1.stl  rfwheel_1.stl
bal_robot_urdf_description/model/maze_squre/: model.config  model.sdf
bal_robot_urdf_description/urdf/: bal_robot_urdf.gazebo  bal_robot_urdf.trans  bal_robot_urdf.xacro  gazebo_control.xacro  materials.xacro  plugins_urdf.gazebo
bal_robot_urdf_description/worlds/: line_following.world  line_following_with_robot.world  maze_squre.world
module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/src/: task_1.cpp  task_2.cpp  task_3.cpp  task_3.h
module_2_assignment/: CMakeLists.txt  Readme.md  package.xml
module_2_assignment/launch/: logerithmic_launch.py  task1.launch.py  task2.launch.py  task3.launch.py  task4.launch.py
module_2_assignment/src/: drive.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  test.cpp
module_3_assignment/: Readme.md
module_4_assessment/: Readme.md
module_4_assessment/module_4_assignment/: CMakeLists.txt  package.xml
module_4_assessment/module_4_assignment/launch/: lineLoad.launch.py  module_4_camera_lineFollowing.launch.py  module_4_launch.launch.py  module_4_lidar_wallFollowing.launch.py  s
module_4_assessment/module_4_assignment/maze/all_rounder_maze/: model.config  model.sdf
module_4_assessment/module_4_assignment/src/: imu_data_process.cpp  pid_sample.txt  task3.cpp  wall_following.cpp
module_4_assessment/module_4_assignment/worlds/: basicline.dae  maze.world
module_4_assessment/robot_sensing_debug/src/: maze_solving_with_lidar.cpp
yodha_robot_urdf_description/: package.xml  setup.cfg  setup.py
yodha_robot_urdf_description/launch/: display.launch.py  gazebo.launch.py
yodha_robot_urdf_description/meshes/: Gripper_arm_1.stl  Gripper_lock_arm_1.stl  Link_two_arm_1.stl  base_link.stl  gps_1.stl  lbwheel_1.stl  lfwheel_1.stl  lidar_1.stl  link_one_arm_1.stl  link_rotate_arm_1.stl  rbwheel_1.stl  rfwheel_1.stl
yodha_robot_urdf_description/urdf/: materials.xacro  yodha_robot_urdf.gazebo  yodha_robot_urdf.trans  yodha_robot_urdf.xacro
